# fencecraft

./: README.md  pyproject.toml
src/fencecraft/: __init__.py  compiler.py  rules.py  templates.py
tests/: test_fencecraft.py
